[gd_scene load_steps=10 format=3 uid="uid://b0nrq7s8xb02t"]

[ext_resource type="Script" path="res://src/extras/menu/friendly_menu.gd" id="1_bjfxd"]
[ext_resource type="Shader" path="res://src/extras/menu.gdshader" id="2_jcqed"]
[ext_resource type="Texture2D" uid="uid://bneln4ai7litw" path="res://src/resources/ui/title.png" id="3_ywka5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mftcg"]
shader = ExtResource("2_jcqed")
shader_parameter/resolution = Vector2(64, 64)
shader_parameter/noise = 0.0
shader_parameter/distort = 0.06
shader_parameter/offset = 0.0

[sub_resource type="Animation" id="Animation_d5pmd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main/title/shad:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(700, 600)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main/extra:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main/save_select:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1920, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("main/save_select:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("main/start:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1080)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("main/start:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("main/title:anchor_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.555556]
}

[sub_resource type="Animation" id="Animation_qcjyb"]
resource_name = "entry"
length = 0.5

[sub_resource type="Animation" id="Animation_uhqnq"]
resource_name = "save"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main/title/shad:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(700, 600), Vector2(500, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main/extra:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main/save_select:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1920, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("main/save_select:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("main/title:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.555556, 0.37037]
}

[sub_resource type="Animation" id="Animation_sx63e"]
resource_name = "start"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main/save_select:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1920, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main/start:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1080), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main/start:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("main/save_select:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b1nrb"]
_data = {
"RESET": SubResource("Animation_d5pmd"),
"entry": SubResource("Animation_qcjyb"),
"save": SubResource("Animation_uhqnq"),
"start": SubResource("Animation_sx63e")
}

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bjfxd")

[node name="main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="CenterContainer" parent="main"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.00052
anchor_bottom = 0.555556
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="shad" type="TextureRect" parent="main/title"]
material = SubResource("ShaderMaterial_mftcg")
custom_minimum_size = Vector2(700, 600)
layout_mode = 2
texture = ExtResource("3_ywka5")
expand_mode = 1

[node name="extra" type="CenterContainer" parent="main"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.610185
anchor_right = 1.0
anchor_bottom = 1.00185
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="any" type="Label" parent="main/extra"]
layout_mode = 2
text = "Press any button"
horizontal_alignment = 1
vertical_alignment = 1

[node name="save_select" type="Control" parent="main"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1920.0
offset_right = -1920.0
grow_horizontal = 2
grow_vertical = 2
metadata/main_ui = true

[node name="VBoxContainer" type="VBoxContainer" parent="main/save_select"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -254.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="main/save_select/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = " Saves:"

[node name="ScrollContainer" type="ScrollContainer" parent="main/save_select/VBoxContainer"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="save_container" type="HBoxContainer" parent="main/save_select/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="new_save" type="Button" parent="main/save_select/VBoxContainer/ScrollContainer/save_container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(460, 432)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="start" type="Control" parent="main"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1080.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
metadata/main_ui = true

[node name="VBoxContainer2" type="VBoxContainer" parent="main/start"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.341667
anchor_top = 0.193519
anchor_right = 0.658333
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="save_data" type="Label" parent="main/start/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Name
Difficulty: Null
Health: 0
Stamina: 0
Battery/Flashlight Power: 0
Current Quest:
Null
Current Objective:
Null"
horizontal_alignment = 1
vertical_alignment = 1

[node name="name" type="LineEdit" parent="main/start/VBoxContainer2" groups=["new_game"]]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Jack Campbell"
alignment = 1

[node name="difficulty_label" type="Label" parent="main/start/VBoxContainer2" groups=["new_game"]]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Difficulty:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="difficulty" type="OptionButton" parent="main/start/VBoxContainer2" groups=["new_game"]]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1
item_count = 3
selected = 1
popup/item_0/text = "Walk In The Park (Easy)"
popup/item_0/id = 0
popup/item_1/text = "Hell On Earth (Medium)"
popup/item_1/id = 1
popup/item_2/text = "The Devils Nightmare (Hard)"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="main/start/VBoxContainer2"]
layout_mode = 2
text = "

"

[node name="start_container" type="HBoxContainer" parent="main/start/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="singleplayer" type="Button" parent="main/start/VBoxContainer2/start_container"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "Singleplayer"

[node name="multiplayer" type="Button" parent="main/start/VBoxContainer2/start_container"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
disabled = true
text = "Multiplayer"

[node name="start_back" type="Button" parent="main/start/VBoxContainer2/start_container"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "Back"

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b1nrb")
}

[connection signal="pressed" from="main/save_select/VBoxContainer/ScrollContainer/save_container/new_save" to="." method="_on_new_save_pressed"]
[connection signal="pressed" from="main/start/VBoxContainer2/start_container/singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="main/start/VBoxContainer2/start_container/start_back" to="." method="_on_start_back_pressed"]
